Rework taxonomies workaround

--- a/content/attacks/posts/2012-07-16-BTC-e.md
+++ b/content/attacks/posts/2012-07-16-BTC-e.md
@@ -1,8 +1,8 @@
 ---
 date: 2012-07-16
-attacks/posts/target-entities: BTC-e
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: BTC-e
+entity-types: Exchange
+attack-types: Custodian
 title: BTC-e hacked, losing around 4,500 BTC
 ---
 
