--- a/content/attacks/posts/2017-11-06-Parity.md
+++ b/content/attacks/posts/2017-11-06-Parity.md
@@ -1,10 +1,10 @@
 ﻿---
 date: 2017-11-06
-attacks/posts/target-entities: Parity Technologies
-attacks/posts/entity-types: 
+target-entities: Parity Technologies
+entity-types: 
   - Wallet
   - DeFi
-attacks/posts/attack-types: Human Error
+attack-types: Human Error
 title: "Parity Multisig Wallet Bug Locks 513k ETH"
 ---
 
