--- a/content/attacks/posts/2018-02-08-BitGrail.md
+++ b/content/attacks/posts/2018-02-08-BitGrail.md
@@ -1,8 +1,8 @@
 ---
 date: 2018-02-08
-attacks/posts/target-entities: BitGrail
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: BitGrail
+entity-types: Exchange
+attack-types: Custodian
 title: "BitGrail Hack Results in $170 Million Loss"
 
 ---
