--- a/content/attacks/posts/2019-07-12-BITpoint.md
+++ b/content/attacks/posts/2019-07-12-BITpoint.md
@@ -1,8 +1,8 @@
 ---
 date: 2019-07-12
-attacks/posts/target-entities: BITPoint
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: BITPoint
+entity-types: Exchange
+attack-types: Custodian
 title: "BITPoint hacked - $28 million stolen"
 ---
 
