--- a/content/attacks/posts/2020-08-31-2gether.md
+++ b/content/attacks/posts/2020-08-31-2gether.md
@@ -1,8 +1,8 @@
 ---
 date: 2020-08-31
-attacks/posts/target-entities: 2gether
-attacks/posts/entity-types: DeFi
-attacks/posts/attack-types: Custodian
+target-entities: 2gether
+entity-types: DeFi
+attack-types: Custodian
 title: 2gether hacked, losing over €1.183 million worth of cryptocurrencies
 ---
 
