--- a/content/attacks/posts/2022-03-23-Ronin.md
+++ b/content/attacks/posts/2022-03-23-Ronin.md
@@ -1,8 +1,8 @@
 ---
 date: 2022-03-23
-attacks/posts/target-entities: Ronin
-attacks/posts/entity-types: Blockchain
-attacks/posts/attack-types: 51%
+target-entities: Ronin
+entity-types: Blockchain
+attack-types: 51%
 title: Ronin Network suffers 51% attack, $625 million stolen
 ---
 
