--- a/content/attacks/posts/2022-11-01-Deribit.md
+++ b/content/attacks/posts/2022-11-01-Deribit.md
@@ -1,8 +1,8 @@
 ---
 date: 2022-11-01
-attacks/posts/target-entities: Deribit
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: Deribit
+entity-types: Exchange
+attack-types: Custodian
 title: "Deribit Hack: $28 Million Stolen in Hot Wallet Attack"
 ---
 
