--- a/content/attacks/posts/2023-05-29-Qubit.md
+++ b/content/attacks/posts/2023-05-29-Qubit.md
@@ -1,8 +1,8 @@
 ---
 date: 2022-03-23
-attacks/posts/target-entities: Qubit Finance
-attacks/posts/entity-types: DeFi
-attacks/posts/attack-types: Bridge Hack
+target-entities: Qubit Finance
+entity-types: DeFi
+attack-types: Bridge Hack
 title: "Hackers Breach Qubit Finance Platform, Stealing $80 Million"
 ---
 
