--- a/content/attacks/posts/2014-02-28-MtGox.md
+++ b/content/attacks/posts/2014-02-28-MtGox.md
@@ -1,8 +1,8 @@
 ---
 date: 2014-02-28
-attacks/posts/target-entities: MtGox
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: MtGox
+entity-types: Exchange
+attack-types: Custodian
 title: Mt. Gox hacked, losing over $450 million worth of Bitcoin
 ---
 
