--- a/content/attacks/posts/2018-04-04-Verge.md
+++ b/content/attacks/posts/2018-04-04-Verge.md
@@ -1,8 +1,8 @@
 ---
 date: 2018-04-04
-attacks/posts/target-entities: Verge
-attacks/posts/entity-types: Coin
-attacks/posts/attack-types:
+target-entities: Verge
+entity-types: Coin
+attack-types:
     - 51%
     - Protocol exploit
 title: Verge suffers a 51% attack in April 2018
