--- a/content/attacks/posts/2019-03-24-DragonEx.md
+++ b/content/attacks/posts/2019-03-24-DragonEx.md
@@ -1,8 +1,8 @@
 ---
 date: 2019-03-24
-attacks/posts/target-entities: Bitstamp
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: Bitstamp
+entity-types: Exchange
+attack-types: Custodian
 title: "DragonEx Hacked for $7 Million"
 ---
 
