--- a/content/attacks/posts/2019-11-27-Upbit.md
+++ b/content/attacks/posts/2019-11-27-Upbit.md
@@ -1,8 +1,8 @@
 ---
 date: 2019-11-27
-attacks/posts/target-entities: Upbit
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: Upbit
+entity-types: Exchange
+attack-types: Custodian
 title: "Upbit Loses $49 Million in Cyberattack"
 ---
 
