--- a/content/attacks/posts/2020-09-25-KuCoin.md
+++ b/content/attacks/posts/2020-09-25-KuCoin.md
@@ -1,8 +1,8 @@
 ---
 date: 2020-09-26
-attacks/posts/target-entities: KuCoin
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: KuCoin
+entity-types: Exchange
+attack-types: Custodian
 title: "KuCoin Suffers $281 Million Hack"
 ---
 
