--- a/content/attacks/posts/2021-08-18-Liquid.md
+++ b/content/attacks/posts/2021-08-18-Liquid.md
@@ -1,8 +1,8 @@
 ---
 date: 2021-08-18
-attacks/posts/target-entities: Liquid
-attacks/posts/entity-types: Exchange
-attacks/posts/attack-types: Custodian
+target-entities: Liquid
+entity-types: Exchange
+attack-types: Custodian
 title: "Liquid Exchange Hacked for $97 Million"
 ---
 
