--- a/content/attacks/posts/2022-02-02-Wormhole.md
+++ b/content/attacks/posts/2022-02-02-Wormhole.md
@@ -1,8 +1,8 @@
 ---
 date: 2022-02-02
-attacks/posts/target-entities: Wormhole
-attacks/posts/entity-types: Defi
-attacks/posts/attack-types: Protocol Exploit
+target-entities: Wormhole
+entity-types: Defi
+attack-types: Protocol Exploit
 title: "Wormhole Hack: Code Vulnerability Has Led to $325 Million Stolen"
 ---
 
