--- a/content/attacks/posts/2012-09-19-Silk-Road.md
+++ b/content/attacks/posts/2012-09-19-Silk-Road.md
@@ -1,45 +1,46 @@
 ---
 date: 2022-11-04
-custodians: U.S. Department of Justice, Internal Revenue Service - Criminal Investigation
-categories: Darknet, Fraud, Seizure
-title: "U.S. Justice Department Seizes $3.36 Billion in Bitcoin from Silk Road Fraud"
+target-entities: Silk Road 
+entity-types: 
+    - Darknet
+    - Market
+attack-types: 
+    - Web Infrastructure Attack
+    - Race Condition Exploit
+title: "50,000 Bitcoin Wire Fraud: Record Cryptocurrency Seizure in U.S. History"
 ---
 
 ## Summary
 
-On 19th September 2012, James Zhong exploited the Silk Road dark web marketplace and was convicted for committing wire fraud. He managed to unlawfully obtain over 50,000 Bitcoin. Law enforcement seized approximately 50,676 Bitcoin from Zhong's residence, valued at over $3.36 billion. This seizure marked the largest cryptocurrency seizure in the history of the U.S. Department of Justice.
+[On September 19, 2012, James Zhong exploited the Silk Road dark web marketplace and was convicted of committing wire fraud](https://www.justice.gov/usao-sdny/pr/us-attorney-announces-historic-336-billion-cryptocurrency-seizure-and-conviction). The attacker managed to unlawfully obtain over 50,000 BTC by creating roughly nine accounts. Additionally, Zhong received 50,000 BitcoinCash(BCH) due to a hard fork coin split in August 2017, when every Bitcoin address also received an identical balance in BCH. Zhong managed to trigger over 140 transactions in rapid succession, fooling Silk Road’s withdrawal-processing system. Consequently, the funds were moved to separate addresses to prevent detection and obfuscate the source of the bitcoins. Zhong, using a decentralized Bitcoin mixer, frustrated tracing efforts and managed to conceal his fraudulent activities for nearly ten years. Law enforcement seized approximately 50,676 BTC from Zhong's residence, valued at over $3.36 billion, on November 9, 2021. This incident marked the largest cryptocurrency seizure in the history of the U.S. Department of Justice as of July 6, 2023.
 
 ## Attackers
 
-James Zhong, the attacker, executed a scheme to defraud Silk Road of Bitcoin by creating approximately nine accounts. He managed to trigger over 140 transactions in rapid succession, fooling Silk Road’s withdrawal-processing system. He moved the Bitcoin to separate addresses to prevent detection and obfuscate the source of the Bitcoin.
+James Zhong, a resident of Gainesville and Athens, Georgia, was convicted of wire fraud after exploiting the Silk Road dark web marketplace. The following addresses were used by the attacker:
+- [13GdXePufLt9DipRa5AvG18xLcFNN7TrJY](https://www.blockchain.com/explorer/addresses/btc/13GdXePufLt9DipRa5AvG18xLcFNN7TrJY)
+- [1N6xxifiiGxonvNAdzZs8M1NNAYNVwPUqq](https://www.blockchain.com/explorer/addresses/BTC/1N6xxifiiGxonvNAdzZs8M1NNAYNVwPUqq)
+- [1L6QDHZVHnvPnEuF2pzmMPr1N3pz5iH8eU](https://www.blockchain.com/explorer/addresses/btc/1L6QDHZVHnvPnEuF2pzmMPr1N3pz5iH8eU)
+- [17abSYoj9A7JJU5iqAGcPX74jzL9ELA6Ek](https://www.blockchain.com/explorer/addresses/btc/17abSYoj9A7JJU5iqAGcPX74jzL9ELA6Ek)
+- [1GSNd5FcMB3NWbfkvJG2cq5NW1vA7cz3yF](https://www.blockchain.com/explorer/addresses/btc/1GSNd5FcMB3NWbfkvJG2cq5NW1vA7cz3yF)
 
 ## Losses
 
-Silk Road sustained a loss of approximately 50,676 Bitcoin, valued at over $3.36 billion at the time of the seizure. The funds were fully returned following the seizure.
+Silk Road sustained a loss of over 50,676 BTC, valued at approximately $3.36 billion at the time of the seizure. 
 
 ## Timeline
 
 - **September 19, 2012:** Zhong exploited the Silk Road, obtaining approximately 50,000 Bitcoin.
-- **August 2017:** Zhong received a matching amount of Bitcoin Cash following a hard fork coin split, which he later exchanged for additional Bitcoin.
-- **November 9, 2021:** The authorities seized 50,676 Bitcoin and other assets from Zhong’s residence in Gainesville, Georgia.
-- **November 4, 2022:** Zhong pled guilty to his charges before the United States District Judge Paul G. Gardephe.
-- **February 22, 2023:** Zhong is scheduled to be sentenced.
+- **August 2017:** [Bitcoin hard fork](https://www.investopedia.com/news/all-about-bitcoin-cash-hard-fork/) resulted in Zhong obtaining an additional 50,000 BitcoinCash.
+- **November 9, 2021:** The authorities seized 50,676 BTC and other assets from Zhong’s residence in Gainesville, Georgia.
+- **November 4, 2022:** Zhong [pleaded guilty](https://www.malwarebytes.com/blog/news/2022/11/silk-road-mega-thief-james-zhong-pleads-guilty) to his charges before United States District Judge Paul G. Gardephe.
+- **February 22, 2023:** [Zhong is sentenced to one year and one day in prison](https://www.justice.gov/usao-sdny/pr/silk-road-dark-web-fraud-defendant-sentenced-following-seizure-and-forfeiture-over-34)
 
 ## Security Failure Causes
 
-**Silk Road’s Withdrawal-Processing System:** The security failure in Silk Road's withdrawal-processing system allowed Zhong to trick the platform into releasing approximately 50,000 Bitcoin.
+**Vulnerable Withdrawal-Processing System:** The security failure in Silk Road's withdrawal-processing system allowed Zhong to trick the platform via race condition exploitation into releasing approximately 50,000 Bitcoin.
+
+**Insufficient Account Security:** Silk Road's account creation process allowed Zhong to register multiple accounts with only minimal information, facilitating his fraudulent activities. 
+
+**Lack of Advanced Fraud Detection Mechanisms:** Silk Road's failure to implement advanced fraud detection mechanisms resulted in Zhong's ability to execute over 140 transactions in rapid succession without triggering any alerts or suspensions.
 
 **Bitcoin Anonymity:** The pseudonymous nature of Bitcoin enabled Zhong to initially hide his fraudulent activities and the source of the Bitcoin.
-
-**Insufficient Account Security:** Silk Road's account creation process allowed Zhong to register multiple accounts with only minimal information, facilitating his fraudulent activities.
-
-## Proof
-
-References: 
-
-- [U.S. Attorney announces historic $3.36 billion cryptocurrency seizure and conviction](https://www.justice.gov/usao-sdny/pr/us-attorney-announces-historic-336-billion-cryptocurrency-seizure-and-conviction)
-- [Silk Road mega thief James Zhong pleads guilty](https://www.malwarebytes.com/blog/news/2022/11/silk-road-mega-thief-james-zhong-pleads-guilty)
-- [FractalEncrypt Status](https://twitter.com/FractalEncrypt/status/1590004511015571456)
-- [Blockchain Data 1](https://www.blockchain.com/btc/address/1DwCny29uDhpmd8Mz4hKudwmrSGBdUvrtL)
-- [Blockchain Data 2](https://www.blockchain.com/btc/address/12hkgmdqps76Bp3e466c2DTGDfg8tKRGLM)
-- [Blockchain Data 3](https://www.blockchain.com/btc/address/1P1ik9HkCNSs7Zmgc3LzEN72X1Egwm9Chb)
