Destroyed plagiarism; made cosmetic changes

--- a/content/attacks/posts/2016-08-02-Bitfinex.md
+++ b/content/attacks/posts/2016-08-02-Bitfinex.md
@@ -1,14 +1,14 @@
 ---
-Date: 2016-08-02
-Type of attack: "Custodian"
-Target entity: "Bitfinex"
-Type of entity: "Exchange"
-Title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
+date: 2016-08-02
+target-entities: Bitfinex
+entity-types: Exchange
+attack-types: Custodian
+title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
 ---
 
 ## Summary
 
-On August 2, 2016, Bitfinex, a prominent cryptocurrency exchange, experienced a security breach resulting in the theft of approximately 120,000 bitcoins (US$72 million at the time). This incident led to a [20% decline](https://www.coindesk.com/markets/2016/08/02/bitcoin-drops-nearly-20-as-exchange-hack-amplifies-price-decline/) in the trading price of Bitcoin — from US$600 to US$400, reducing the value of the stolen Bitcoins to nearly US$58 million. In response to the breach, Bitfinex immediately halted all Bitcoin withdrawals and trading activities. The exchange collaborated with law enforcement agencies and other entities to investigate and apprehend the hackers. As a result of the breach, all Bitfinex customers experienced a 36% reduction in their account balances and were compensated with BFX tokens proportional to their losses. Despite employing [BitGo's multiple-signature security system](https://en.wikipedia.org/wiki/2016_Bitfinex_hack), the hack still occurred.
+On the 2nd of August, 2016, Bitfinex, a prominent cryptocurrency exchange, experienced a security breach resulting in the theft of approximately 120,000 bitcoins (US$72 million at the time). This incident led to a [20% decline](https://www.coindesk.com/markets/2016/08/02/bitcoin-drops-nearly-20-as-exchange-hack-amplifies-price-decline/) in the trading price of Bitcoin — from US$600 to US$400, reducing the value of the stolen bitcoins to nearly US$58 million. In response to the breach, Bitfinex immediately halted all Bitcoin withdrawals and trading activities. The exchange collaborated with law enforcement agencies and other entities to investigate and apprehend the hackers. As a result of the breach, all Bitfinex customers experienced a 36% reduction in their account balances and were compensated with BFX tokens proportional to their losses. Despite employing [BitGo's multi-signature security system](https://en.wikipedia.org/wiki/2016_Bitfinex_hack), the hack still occurred.
 
 In February 2022, the US government achieved a successful recovery and seizure of a portion of the stolen bitcoins. These bitcoins were valued at US$3.6 billion at the time. The recovery was made possible by decrypting a file that contained the addresses and private keys associated with the stolen funds.
 
@@ -34,4 +34,4 @@ Within three hours, the hackers successfully stole approximately 119,756 BTC, eq
 
 ## Security Failure Causes
 
-**Violation of the Security Protocol:** Bitfinex [neglected](https://www.occrp.org/en/blog/17670-confidential-report-flags-bitfinex-security-lapses-in-huge-2016-hack) to incorporate recommended operational, financial, and technological controls proposed by its digital security partner, Bitgo, as revealed by an OCCRP report. This lapse resulted in critical errors, including the storage of two security keys on a single device, granting unrestricted access to Bitfinex's systems and security tokens. Exploiting this vulnerability, hackers successfully circumvented BitGo's withdrawal limits and swiftly depleted the wallet. The absence of essential security measures, such as server activity logging and a withdrawal whitelist, further exacerbated the susceptibility that led to the breach.
+**Violation of the Security Protocol:** Bitfinex [neglected](https://www.occrp.org/en/blog/17670-confidential-report-flags-bitfinex-security-lapses-in-huge-2016-hack) to incorporate recommended operational, financial, and technological controls proposed by its digital security partner, Bitgo, as revealed by an OCCRP report. This lapse resulted in critical errors, including the storage of two security keys on a single device, granting unrestricted access to Bitfinex's systems and security tokens. Exploiting this vulnerability, hackers successfully circumvented BitGo's withdrawal limits and swiftly depleted the wallet.
