--- a/content/attacks/posts/2016-08-02-Bitfinex.md
+++ b/content/attacks/posts/2016-08-02-Bitfinex.md
@@ -8,7 +8,7 @@ title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
 
 ## Summary
 
-On the 2nd of August, 2016, Bitfinex, a prominent cryptocurrency exchange, experienced a security breach resulting in the theft of approximately 120,000 bitcoins (US$72 million at the time). This incident led to a [20% decline](https://www.coindesk.com/markets/2016/08/02/bitcoin-drops-nearly-20-as-exchange-hack-amplifies-price-decline/) in the trading price of Bitcoin — from US$600 to US$400, reducing the value of the stolen bitcoins to nearly US$58 million. In response to the breach, Bitfinex immediately halted all Bitcoin withdrawals and trading activities. The exchange collaborated with law enforcement agencies and other entities to investigate and apprehend the hackers. As a result of the breach, all Bitfinex customers experienced a 36% reduction in their account balances and were compensated with BFX tokens proportional to their losses. Despite employing [BitGo's multi-signature security system](https://en.wikipedia.org/wiki/2016_Bitfinex_hack), the hack still occurred.
+On the 2nd of August 2016, Bitfinex, a prominent cryptocurrency exchange, experienced a security breach resulting in the theft of approximately 120,000 bitcoins (US$72 million at the time). This incident led to a [20% decline](https://www.coindesk.com/markets/2016/08/02/bitcoin-drops-nearly-20-as-exchange-hack-amplifies-price-decline/) in the trading price of Bitcoin — from US$600 to US$400, reducing the value of the stolen bitcoins to nearly US$58 million. In response to the breach, Bitfinex immediately halted all Bitcoin withdrawals and trading activities. The exchange collaborated with law enforcement agencies and other entities to investigate and apprehend the hackers. As a result of the breach, all Bitfinex customers experienced a 36% reduction in their account balances and were compensated with BFX tokens proportional to their losses. Despite employing [BitGo's multi-signature security system](https://en.wikipedia.org/wiki/2016_Bitfinex_hack), the hack still occurred.
 
 In February 2022, the US government achieved a successful recovery and seizure of a portion of the stolen bitcoins. These bitcoins were valued at US$3.6 billion at the time. The recovery was made possible by decrypting a file that contained the addresses and private keys associated with the stolen funds.
 
