--- a/content/attacks/posts/2012-07-16-BTC-e.md
+++ b/content/attacks/posts/2012-07-16-BTC-e.md
@@ -1,8 +1,10 @@
 ---
 date: 2012-07-16
 target-entities: BTC-e
-entity-types: Exchange
-attack-types: Custodian
+entity-types:
+  - Custodian
+  - Exchange
+attack-types: Web Infrastructure Attack
 title: BTC-e hacked, losing around 4,500 BTC
 ---
 
