--- a/content/attacks/posts/2015-01-04-Bitstamp.md
+++ b/content/attacks/posts/2015-01-04-Bitstamp.md
@@ -1,8 +1,12 @@
 ---
 date: 2015-01-04
 target-entities: Bitstamp
-entity-types: Exchange
-attack-types: Custodian
+entity-types:
+  - Custodian
+  - Exchange
+attack-types:
+  - Phishing
+  - Wallet Hack
 title: Bitstamp hot wallet hacked for 18,866 BTC due to human error
 ---
 
