--- a/content/attacks/posts/2016-08-23-Krypton.md
+++ b/content/attacks/posts/2016-08-23-Krypton.md
@@ -1,7 +1,7 @@
 ---
 date: 2016-08-23
 target-entities: Krypton
-entity-types: Coin
+entity-types: Blockchain
 attack-types: 51%
 title: "Krypton (KR) suffers a 51% attack in August 2016"
 ---
