--- a/content/attacks/posts/2017-07-18-Parity.md
+++ b/content/attacks/posts/2017-07-18-Parity.md
@@ -1,9 +1,10 @@
 ﻿---
 date: 2017-07-18
-attacks/posts/custodians: "Parity Technologies"
-attacks/posts/categories:
-    - "DeFi"
-    - "Smart contracts"
+target-entities: Parity Technologies
+entity-types: 
+  - DeFi
+  - Wallet
+attack-types: Smart Contract Exploit
 title: "Parity Multisig Wallet Hack Resulting in a $34 Million Loss"
 ---
 
