--- a/content/attacks/posts/2017-11-06-Parity.md
+++ b/content/attacks/posts/2017-11-06-Parity.md
@@ -2,9 +2,9 @@
 date: 2017-11-06
 target-entities: Parity Technologies
 entity-types: 
-  - Wallet
   - DeFi
-attack-types: Human Error
+  - Wallet
+attack-types: Smart Contract Exploit
 title: "Parity Multisig Wallet Bug Locks 513k ETH"
 ---
 
