--- a/content/attacks/posts/2018-04-04-Verge.md
+++ b/content/attacks/posts/2018-04-04-Verge.md
@@ -1,10 +1,8 @@
 ---
 date: 2018-04-04
 target-entities: Verge
-entity-types: Coin
-attack-types:
-    - 51%
-    - Protocol exploit
+entity-types: Blockchain
+attack-types: 51%
 title: Verge suffers a 51% attack in April 2018
 ---
 
