--- a/content/attacks/posts/2018-10-24-Vertcoin.md
+++ b/content/attacks/posts/2018-10-24-Vertcoin.md
@@ -1,7 +1,7 @@
 ---
 date: 2018-10-24
 target-entities: Vertcoin
-entity-types: Coin
+entity-types: Blockchain
 attack-types: 51%
 title: Vertcoin suffers a 51% attack
 ---
