--- a/content/attacks/posts/2019-03-24-DragonEx.md
+++ b/content/attacks/posts/2019-03-24-DragonEx.md
@@ -1,8 +1,10 @@
 ---
 date: 2019-03-24
-target-entities: Bitstamp
-entity-types: Exchange
-attack-types: Custodian
+target-entities: DragonEx
+entity-types:
+  - Custodian
+  - Exchange
+attack-types: Phishing
 title: "DragonEx Hacked for $7 Million"
 ---
 
