--- a/content/attacks/posts/2019-07-12-BITpoint.md
+++ b/content/attacks/posts/2019-07-12-BITpoint.md
@@ -1,8 +1,10 @@
 ---
 date: 2019-07-12
 target-entities: BITPoint
-entity-types: Exchange
-attack-types: Custodian
+entity-types:
+  - Custodian
+  - Exchange
+attack-types: Wallet Hack
 title: "BITPoint hacked - $28 million stolen"
 ---
 
