--- a/content/attacks/posts/2019-11-27-Upbit.md
+++ b/content/attacks/posts/2019-11-27-Upbit.md
@@ -1,8 +1,10 @@
 ---
 date: 2019-11-27
 target-entities: Upbit
-entity-types: Exchange
-attack-types: Custodian
+entity-types: 
+  - Custodian
+  - Exchange
+attack-types: Wallet Hack
 title: "Upbit Loses $49 Million in Cyberattack"
 ---
 
