--- a/content/attacks/posts/2020-08-31-2gether.md
+++ b/content/attacks/posts/2020-08-31-2gether.md
@@ -1,8 +1,10 @@
 ---
 date: 2020-08-31
 target-entities: 2gether
-entity-types: DeFi
-attack-types: Custodian
+entity-types:
+    - Custodian
+    - Exchange
+attack-types: Web Infrastrucute Attack
 title: 2gether hacked, losing over €1.183 million worth of cryptocurrencies
 ---
 
