--- a/content/attacks/posts/2020-09-25-KuCoin.md
+++ b/content/attacks/posts/2020-09-25-KuCoin.md
@@ -1,8 +1,10 @@
 ---
 date: 2020-09-26
 target-entities: KuCoin
-entity-types: Exchange
-attack-types: Custodian
+entity-types:
+    - Custodian
+    - Exchange
+attack-types: Wallet Hack
 title: "KuCoin Suffers $281 Million Hack"
 ---
 
