--- a/content/attacks/posts/2021-08-18-Liquid.md
+++ b/content/attacks/posts/2021-08-18-Liquid.md
@@ -1,8 +1,10 @@
 ---
 date: 2021-08-18
 target-entities: Liquid
-entity-types: Exchange
-attack-types: Custodian
+entity-types:
+    - Custodian
+    - Exchange
+attack-types: Wallet Hack
 title: "Liquid Exchange Hacked for $97 Million"
 ---
 
