--- a/content/attacks/posts/2021-12-11-AscendEX.md
+++ b/content/attacks/posts/2021-12-11-AscendEX.md
@@ -1,6 +1,10 @@
 ---
 date: 2021-12-11
-categories: "Custodian"
+target-entities: Polygon
+entity-types: 
+    - Custodian
+    - Exchange
+attack-types: Wallet Hack
 title: "AscendEX Hack: $77 Million Stolen in Hot Wallet Breach"
 ---
 
