--- a/content/attacks/posts/2022-01-28-Qubit.md
+++ b/content/attacks/posts/2022-01-28-Qubit.md
@@ -1,8 +1,10 @@
 ---
-date: 2022-03-23
+date: 2022-01-28
 target-entities: Qubit Finance
-entity-types: DeFi
-attack-types: Bridge Hack
+entity-types:
+    - DeFi
+    - Lending Platform
+attack-types: Smart Contract Exploit
 title: "Hackers Breach Qubit Finance Platform, Stealing $80 Million"
 ---
 
