--- a/content/attacks/posts/2022-02-02-Wormhole.md
+++ b/content/attacks/posts/2022-02-02-Wormhole.md
@@ -1,8 +1,12 @@
 ---
 date: 2022-02-02
 target-entities: Wormhole
-entity-types: Defi
-attack-types: Protocol Exploit
+entity-types:
+    - DeFi
+    - Bridge
+attack-types:
+    - Smart Contract Exploit
+    - Signarute Verification Issue
 title: "Wormhole Hack: Code Vulnerability Has Led to $325 Million Stolen"
 ---
 
