--- a/content/attacks/posts/2014-02-28-MtGox.md
+++ b/content/attacks/posts/2014-02-28-MtGox.md
@@ -1,8 +1,10 @@
 ---
 date: 2014-02-28
 target-entities: MtGox
-entity-types: Exchange
-attack-types: Custodian
+entity-types:
+  - Custodian
+  - Exchange
+attack-types: Web Infrastructure Attack
 title: Mt. Gox hacked, losing over $450 million worth of Bitcoin
 ---
 
