--- a/content/attacks/posts/2016-08-27-Shift.md
+++ b/content/attacks/posts/2016-08-27-Shift.md
@@ -1,7 +1,7 @@
 ---
 date: 2016-08-27
 target-entities: Shift
-entity-types: Coin
+entity-types: Blockchain
 attack-types: 51%
 title: "Shift (SHIFT) experiences a 51% attack in August 2016"
 ---
