--- a/content/attacks/posts/2018-02-08-BitGrail.md
+++ b/content/attacks/posts/2018-02-08-BitGrail.md
@@ -1,10 +1,11 @@
 ---
 date: 2018-02-08
 target-entities: BitGrail
-entity-types: Exchange
-attack-types: Custodian
+entity-types:
+  - Custodian
+  - Exchange
+attack-types: Wallet Hack
 title: "BitGrail Hack Results in $170 Million Loss"
-
 ---
 
 ## Summary
