--- a/content/attacks/posts/2021-12-05-Polygon.md
+++ b/content/attacks/posts/2021-12-05-Polygon.md
@@ -1,8 +1,14 @@
 ---
 date: 2021-12-05
-target-entities: Polygon
-entity-types: Defi
-attack-types: Protocol Exploit
+target-entities: 
+    - Polygon
+    - Plasma Bridge
+entity-types: 
+    - Blockchain
+    - Bridge
+attack-types:
+    - Smart Contract Exploit
+    - Signature Verification Issue
 title: "Polygon hacked for over 800,000 MATIC"
 ---
 
