--- a/content/attacks/posts/2022-11-01-Deribit.md
+++ b/content/attacks/posts/2022-11-01-Deribit.md
@@ -1,8 +1,10 @@
 ---
 date: 2022-11-01
 target-entities: Deribit
-entity-types: Exchange
-attack-types: Custodian
+entity-types: 
+    - Custodian
+    - Exchange
+attack-types: Wallet Hack
 title: "Deribit Hack: $28 Million Stolen in Hot Wallet Attack"
 ---
 
