updated the Headers

--- a/content/attacks/posts/2016-08-02-Bitfinex.md
+++ b/content/attacks/posts/2016-08-02-Bitfinex.md
@@ -1,8 +1,11 @@
 ---
 date: 2016-08-02
-target-entities: Bitfinex
-entity-types: Exchange
-attack-types: Custodian
+target-entities: 
+- Bitfinex
+entity-types: 
+- Custodian
+attack-types: 
+- Web Infrastructure Attack
 title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
 ---
 
