Updated entity type

--- a/content/attacks/posts/2016-08-02-Bitfinex.md
+++ b/content/attacks/posts/2016-08-02-Bitfinex.md
@@ -4,6 +4,7 @@ target-entities:
 - Bitfinex
 entity-types: 
 - Custodian
+- Exchange
 attack-types: 
 - Web Infrastructure Attack
 title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
