--- a/content/attacks/posts/2020-08-31-2gether.md
+++ b/content/attacks/posts/2020-08-31-2gether.md
@@ -4,7 +4,7 @@ target-entities: 2gether
 entity-types:
     - Custodian
     - Exchange
-attack-types: Web Infrastrucute Attack
+attack-types: Web Infrastructure Attack
 title: 2gether hacked, losing over €1.183 million worth of cryptocurrencies
 ---
 
