--- a/content/attacks/posts/2022-02-02-Wormhole.md
+++ b/content/attacks/posts/2022-02-02-Wormhole.md
@@ -6,7 +6,7 @@ entity-types:
     - Bridge
 attack-types:
     - Smart Contract Exploit
-    - Signarute Verification Issue
+    - Signature Verification Issue
 title: "Wormhole Hack: Code Vulnerability Has Led to $325 Million Stolen"
 ---
 
