Reformat headers according to new changes

--- a/content/attacks/posts/2018-09-14-Zaif.md
+++ b/content/attacks/posts/2018-09-14-Zaif.md
@@ -1,6 +1,10 @@
 ---
 date: 2018-09-14
-categories: "Custodian"
+target-entities: Zaif
+entity-types:
+  - Custodian
+  - Exchange
+attack-types: Wallet Hack
 title: "Zaif loses $60 Million in Cyberattack"
 ---
 
