Lazarus Update for the Ronin incident (#195)
* Ronin Lazarus Update

* Update 2022-03-23-Ronin.md

---------

Co-authored-by: Evgeny Dmitriev <56804873+evgenydmitriev@users.noreply.github.com>

--- a/content/attacks/posts/2022-03-23-Ronin.md
+++ b/content/attacks/posts/2022-03-23-Ronin.md
@@ -1,37 +1,40 @@
 ---
 date: 2022-03-23
-target-entities: Ronin
-entity-types: Blockchain
-attack-types: 51%
-title: Ronin Network suffers 51% attack, $625 million stolen
+tags:
+    - North Korea
+    - Lazarus Group
+target-entities:
+    - Ronin Network
+    - Ronin Bridge
+    - Axie Infinity
+entity-types:
+    - Blockchain 
+    - Bridge
+    - GameFi
+attack-types: 
+    - 51%
+    - Wallet Hack
+title: "Ronin Network suffers 51% attack, $625 million stolen"
 ---
 
 ## Summary
 
-On March 23, 2022, Ronin Network, a blockchain that powers the popular game Axie Infinity, suffered a 51% attack. This allows the attacker to control the network and perform malicious actions, such as double-spending transactions or preventing new blocks from being mined. The attack resulted in the theft of $625 million worth of Ethereum and USDC.
+On March 23, 2022, Ronin Network, a blockchain that powers the popular game Axie Infinity, suffered a 51% attack. This allows the attacker to control the network via compromising validators private keys and perform malicious actions, such as double-spending transactions or preventing new blocks from being mined. The attack resulted in the theft of $625 million worth of Ethereum and USDC. The hackers were able to reorganize over 100 blocks, which allowed them to double-spend large amount of assets.
 
 ## Attackers 
 
-The attackers behind the 51% attack remain unidentified. However, it is believed that the attackers used a backdoor that was created by a third-party contractor to gain access to the Ronin Network's systems.
+It is believed that the Lazarus Group may be involved in the incident, though the attackers have not been identified.
 
 ## Losses
 
-The 51% attack on Ronin Network resulted in the theft of $625 million worth of Ethereum and USDC. The attackers were able to exploit a vulnerability in the blockchain's consensus mechanism to reorganize blocks and reverse transactions.
+The 51% attack on Ronin Network resulted in the theft of $625 million worth of Ethereum and USDC.
 
 ## Timeline
 
 - **March 23, 2022:** Ronin Network announces that it has suffered a 51% attack. The blockchain is halted to prevent further damage.
 - **March 29, 2022:** Ronin Network resumes operations after the network is patched. The stolen funds are not recovered.
+- **April 14, 2022:** The Office of Foreign Assets Control (OFAC) [attributes the Axie Infinity heist to the Lazarus Group](https://home.treasury.gov/news/press-releases/jy0768), a cybercrime organization linked to the Democratic People's Republic of Korea (DPRK). 
 
 ## Security Failure Causes
 
 The main reason for the 51% attack on Ronin Network was a vulnerability in the blockchain's consensus mechanism. The vulnerability allowed the attackers to rent mining power and gain control of over 50% of the network's hashrate.
-
-Ronin Network has since patched the vulnerability and taken steps to improve the security of the network. However, the attack has highlighted the risks associated with Proof-of-Work blockchains.
-
-## Additional Details 
-
-- The attack was carried out by a group of hackers who rented mining power from a number of different mining pools.
-- The hackers were able to reorganize over 100 blocks, which allowed them to double-spend $625 million worth of ETH and USDC.
-- Ronin Network has since patched the vulnerability that allowed the attack to take place.
-- The attack has highlighted the risks associated with Proof-of-Work blockchains.
