Update Security Failure Causes

--- a/content/attacks/posts/2018-06-10-Coinrail.md
+++ b/content/attacks/posts/2018-06-10-Coinrail.md
@@ -32,5 +32,7 @@ The identity of the attackers has not been publicly disclosed.
 
 ## Security Failure Causes
 
-The hack happened due to a lack of efficient security protocols. [Networking experts believed](https://coinmarketcap.com/alexandria/article/crypto-hacks-the-coinrail-hack-resulted-in-a-loss-of-over-40-million) believed that the breach was made successful by involuntary support from a machine inside the company that had admin-level access to the internal system.
+**Weak operational security practices:**  According to the local police, the hack happened due to the lack of efficient security protocols.
+
+**Insider threat or social engineering:** [Networking experts believed](https://coinmarketcap.com/alexandria/article/crypto-hacks-the-coinrail-hack-resulted-in-a-loss-of-over-40-million) that the breach was made successful by involuntary support from a machine inside the company that had admin-level access to the internal system.
 
