--- a/content/attacks/posts/2020-09-25-KuCoin.md
+++ b/content/attacks/posts/2020-09-25-KuCoin.md
@@ -5,6 +5,9 @@ entity-types:
     - Custodian
     - Exchange
 attack-types: Wallet Hack
+tags:
+    - North Korea
+    - Lazarus Group
 title: "KuCoin Suffers $281 Million Hack"
 ---
 
