--- a/content/attacks/posts/2023-02-07-CoW-Swap.md
+++ b/content/attacks/posts/2023-02-07-CoW-Swap.md
@@ -7,7 +7,7 @@ entity-types:
 - Exchange
 attack-types:
 - Smart Contract Exploit
-title: "CoW Swap Suffers Smart Contract Exploit Resulting in Approximately $166K Loss"
+title: "CoW Swap Suffers Smart Contract Exploit, Resulting in an Approximately $166K Loss"
 ---
 
 ## Summary
@@ -27,15 +27,15 @@ The identity of the attacker is unknown.
 
 ## Timeline
 
-- **January 27, 2023:** Barter solver enters the CoW Swap solver competition. After being [allowlisted](https://etherscan.io/tx/0x7374b8157267b0c6d8cc05e812e68ddff045c5bdb5ca915c32193e9f752d5947), they [approved](https://etherscan.io/tx/0x92f906bce94bab417cccc87ae046448d7fb8c2c0350b7ed911545577acb3bfc1) their SwapGuard contract.
+- **January 27, 2023:** Barter Solver enters the CoW Swap solver competition. After being [allowlisted](https://etherscan.io/tx/0x7374b8157267b0c6d8cc05e812e68ddff045c5bdb5ca915c32193e9f752d5947), they [approved](https://etherscan.io/tx/0x92f906bce94bab417cccc87ae046448d7fb8c2c0350b7ed911545577acb3bfc1) their SwapGuard contract.
 - **February 7, 2023:** Attackers [exploit](https://dune.com/queries/1543508) a vulnerability in the SwapGuard contract to transfer funds from the CoW Swap's settlement contract to their accounts.
 - **February 7, 2023:** CoW Swap and Barter teams mitigate further damage by identifying the vulnerability, revoking all approvals for the vulnerable contract, and updating the Barter Solver contract.
-- **February 8, 2023:** Barter solver [refunds](https://etherscan.io/tx/0x61a5196468b276bcedc3aab2f2fe255c2d54ca1c655523f4b25c99b1a224e715) the losses caused by the hack.
+- **February 8, 2023:** Barter Solver [refunds](https://etherscan.io/tx/0x61a5196468b276bcedc3aab2f2fe255c2d54ca1c655523f4b25c99b1a224e715) the losses caused by the hack.
 
-[source - CoW Swap forum](https://forum.cow.fi/t/cip-22-slashing-of-the-barter-solver-responsible-for-a-hack-causing-cow-dao-a-loss-of-1-week-fee-accrual/1440)
+[Source - CoW Swap forum](https://forum.cow.fi/t/cip-22-slashing-of-the-barter-solver-responsible-for-a-hack-causing-cow-dao-a-loss-of-1-week-fee-accrual/1440)
 
 ## Security Failure Causes
 
-Several reasons according to the CoW Swap [report](https://blog.cow.fi/cow-swap-solver-exploit-post-mortem-07-02-2023-2faa9f918e29):
-- **Arbitrary Execution:** The SwapGuard contract, developed by the Barter solver had a critical flaw. It allowed arbitrary execution of calls, a feature that the attackers exploited to drain tokens.
-- **Unrestricted Approvals:** The Barter solver approved the vulnerable SwapGuard contract with a maximum value of DAI, without adequately securing the contract against potential exploits.
+A couple of reasons, according to the CoW Swap [report](https://blog.cow.fi/cow-swap-solver-exploit-post-mortem-07-02-2023-2faa9f918e29):
+- **Arbitrary Execution:** The SwapGuard contract, developed by the Barter Solver had a critical flaw. It allowed arbitrary execution of calls, a feature that the attackers exploited to drain tokens.
+- **Unrestricted Approvals:** The Barter Solver approved the vulnerable SwapGuard contract with a maximum value of DAI, without adequately securing the contract against potential exploits.
