--- a/content/attacks/posts/2023-07-22-AlphaPo.md
+++ b/content/attacks/posts/2023-07-22-AlphaPo.md
@@ -1,5 +1,8 @@
 ---
 date: 2023-07-22
+tags:
+    - Lazarus Group
+    - North Korea
 target-entities:
     - AlphaPo
     - CoinsPaid
@@ -46,4 +49,4 @@ The total confirmed loss was approximately $60 million. Specific losses per bloc
 
 ## Security Failure Causes
 
-**Private Key Compromise:** The attackers gained access to the private keys of AlphaPo's hot wallets. It's not clear how the private keys were compromised, but the resulting breach indicates a significant security oversight. 
+**Private Key Compromise:** The attackers gained access to the private keys of AlphaPo's hot wallets. It's not clear how the private keys were compromised, but the resulting breach indicates a significant architectural and operational security oversight. 
