removed_line_and_fixed_grammar

--- a/content/attacks/posts/2023-02-16-Platypus.md
+++ b/content/attacks/posts/2023-02-16-Platypus.md
@@ -8,12 +8,12 @@ entity-types:
 attack-types:
 - Smart Contract Exploit
 - Flash Loan Attack
-title: "Flash Loan Attack on Platypus Finance Results in $8.5 Million Loss"
+title: "Flash Loan Attack on Platypus Finance Results in an $8.5 Million Loss"
 ---
 
 ## Summary
 
-On February 16, 2023, Platypus Finance, the project behind the USP stablecoin, fell victim to a flash loan attack. This resulted in an estimated loss of $8.5 million. The exploit led to a significant drop in the price of the $USP stablecoin, devaluing it by more than 66% from its intended $1 peg. The attack was carried out by minting an excessive number of USP tokens from the MasterPlatypusV4 contract, using an inflated amount of Platypus LP-USDC tokens as collateral.
+On February 16, 2023, Platypus Finance, the project behind the USP stablecoin, fell victim to a flash loan attack. This resulted in an estimated loss of $8.5 million. The exploit led to a significant drop in the price of the $USP stablecoin, devaluing it by more than 66% from its intended $1 peg. The attack was carried out by minting an excessive number of USP tokens from the MasterPlatypusV4 contract and using an inflated amount of Platypus LP-USDC tokens as collateral.
 
 ## Attackers
 
@@ -35,11 +35,10 @@ The identity of the attackers is currently unknown, but it is [believed](https:/
 
 - **February 16, 2023, 07:16:54 PM +UTC:** Attackers [executed](https://snowtrace.io/tx/0x1266a937c2ccd970e5d7929021eed3ec593a95c68a99b4920c2efa226679b430) a flash loan attack.
 - **February 17, 2023:** The Platypus team [announced](https://twitter.com/Platypusdefi/status/1626396538611310592) the hack.
-- **February 17, 2023 04:21:19 PM +UTC:** The Platypus team [reported](https://twitter.com/Platypusdefi/status/1626625098575929344) that they [returned 2.4 million](https://snowtrace.io/tx/0x5e3eb070c772631d599367521b886793e13cf0bc150bd588357c589395d2d5c3)
-- **February 25, 2023:** French police [arrested](https://cointelegraph.com/news/french-police-arrest-2-people-in-connection-to-platypus-attack) 2 people in connection to the Platypus attack
+- **February 17, 2023, 04:21:19 PM +UTC:** The Platypus team [reported](https://twitter.com/Platypusdefi/status/1626625098575929344) that they [returned 2.4 million](https://snowtrace.io/tx/0x5e3eb070c772631d599367521b886793e13cf0bc150bd588357c589395d2d5c3)
+- **February 25, 2023:** French police [arrested](https://cointelegraph.com/news/french-police-arrest-2-people-in-connection-to-platypus-attack) two people in connection with the Platypus attack
 
 ## Security Failure Causes
 
-Several reasons according to the [post-mortem](https://medium.com/@omniscia.io/platypus-finance-incident-post-mortem-7b71a0a47a5e) report:
+Several reasons, according to the [post-mortem](https://medium.com/@omniscia.io/platypus-finance-incident-post-mortem-7b71a0a47a5e) report:
 - **Flawed Solvency Check in the emergencyWithdraw() Function:** The emergencyWithdraw() function was implemented as a safety measure in the MasterPlatypusV4 contract. The solvency check within this function was supposed to ensure that a user couldn't withdraw more funds than they had deposited, thereby maintaining the contract's solvency. However, this check was improperly implemented. It failed to consider the user's debt amount and only checked whether the debt had reached the max limit, leaving the function vulnerable to exploitation.
-- **Potential Mismanagement of Smart Contract Updates:** The presence of such a significant error in the smart contract logic suggests potential mismanagement in the update and audit processes. The exact cause is unclear, but possibilities range from an oversight during contract development to a lapse in auditing. 
