--- a/content/attacks/posts/2022-02-01-BitBNS.md
+++ b/content/attacks/posts/2022-02-01-BitBNS.md
@@ -5,8 +5,8 @@ entity-types:
   - Custodian
   - Exchange
 attack-types: 
-  - Web Infrastructure Attack
-  - Wallet Hack
+  - Infrastructure Attack
+  - Private Key Leak
 title: "BitBNS Exchange Hacked for $8 Million, Incident Initially Concealed"
 ---
 
@@ -44,4 +44,4 @@ Funds lost by chain:
 
 ## Security Failure Causes
 
-**AWS Cloud Storage Vulnerability:** The exploit occurred due to a vulnerability in BitBNS's AWS cloud storage, leading to unauthorized access to the exchange's private keys.
+**Infrastructure Vulnerability:** The exploit occurred due to a vulnerability in BitBNS's AWS cloud storage, leading to unauthorized access to the exchange's private keys.
