--- a/content/attacks/posts/2011-10-05-Bitcoin7.md
+++ b/content/attacks/posts/2011-10-05-Bitcoin7.md
@@ -12,11 +12,11 @@ title: Bitcoin7 Hacked, Losing 5000 BTC
 
 ## Summary
 
-On October 5, 2011, Bitcoin7, a cryptocurrency exchange, suffered a security breach that resulted in the loss of approximately 5,000 BTC. The attack was facilitated by a combination of weak security practices and system vulnerabilities, which allowed the attackers to gain unauthorized access to the exchange's hot wallet. Bitcoin7 claimed to have compensated affected customers and improved security measures following the attack, resuming normal operations within a few days.
+On October 5, 2011, Bitcoin7, a cryptocurrency exchange, suffered a security breach that resulted in the loss of approximately 5,000 BTC. The attack was facilitated by a pcombination of weak security practices and system vulnerabilities](https://bitcointalk.org/index.php?topic=46982.0), which allowed the attackers to gain unauthorized access to the exchange's hot wallet. Bitcoin7 claimed to have compensated affected customers and improved security measures following the attack, resuming normal operations within a few days.
 
 ## Attackers
 
-The attackers behind the Bitcoin7 hack remain unidentified.
+While the attackers behind the Bitcoin7 hack remain unidentified, Bitcoin7 [claimed](https://siliconangle.com/2011/10/07/bitcoin7-hacked-funds-recovery-requires-sensitive-personal-information/) that the attack originated from Russia and Eastern Europe.
 
 ## Losses
 
@@ -24,7 +24,7 @@ Bitcoin7 lost around 5,000 BTC during the attack, worth approximately 32,500 USD
 
 ## Timeline
 
-- **October 5, 2011:** Bitcoin7 announces the hack on their platform and the extent of the losses, with around 5,000 BTC stolen. They revealed that their hot wallet was compromised, leading to the theft of funds on the exchange.
+- **October 5, 2011:** Bitcoin7 [announces the hack](https://en.bitcoin.it/wiki/Bitcoin7) on their platform and the extent of the losses, with around 5,000 BTC stolen. They revealed that their hot wallet was compromised, leading to the theft of funds on the exchange.
 - **October 7, 2011:** Bitcoin7 resumes platform operations.
 
 ## Security Failure Causes
